# dpmd

./: .gitignore  CMakeLists.txt  TODO.md
include/integrators/: base_integrator.hpp  damped_velocity_verlet.cuh  fire.cuh  velocity_verlet.cuh
include/kernels/: base_particle_kernels.cuh  base_point_particle_kernels.cuh  base_poly_particle_kernels.cuh  common.cuh  launch_config.cuh
include/particles/: base_particle.hpp  base_point_particle.hpp  base_poly_particle.hpp  disk.cuh  disk.hpp  rigid.hpp  rigid_bumpy.cuh
include/routines/: jammers.cuh  minimizers.cuh
include/utils/: cuda_debug.hpp  cuda_utils.cuh  device_fields.cuh  device_fields.hpp  h5_io.hpp  output_manager.hpp
src/integrators/: fire.cu
src/kernels/: base_particle_kernels.cu  base_point_particle_kernels.cu  base_poly_particle_kernels.cu  common_globals.cu
src/particles/: disk.cu  rigid.cu  rigid_bumpy.cu
src/routines/: jammers.cu  minimizers.cu
src/utils/: device_fields.cu
tests/: box_sample.cu  box_sample_rigid_bumpy_wall_final.cu  damped_dynamics_compress_to_packing_fraction.cu  damped_jam_rigid_bumpy.cu  disk_calculate.cu  disk_equilibrate_pbc.cu  disk_jam_pbc.cu  domain_sample_rigid_bumpy_wall_final.cu  fire_disk_pbc.cu  fire_disk_wall.cu  fire_jam_disk_pbc.cu  fire_jam_disk_wall.cu  fire_jam_rigid_bumpy.cu  fire_jam_rigid_bumpy_wall.cu  fire_rigid_bumpy_pbc.cu  fire_rigid_bumpy_wall.cu  jam_rigid_bumpy.cu  jam_rigid_bumpy_wall_final.cu  main.cu  nve_disk_pbc.cu  nve_disk_pbc_final.cu  nve_disk_wall.cu  nve_rigid_bumpy_pbc.cu  nve_rigid_bumpy_pbc_final.cu  nve_rigid_bumpy_pbc_final_copy.cu  nve_rigid_bumpy_wall.cu  nve_rigid_bumpy_wall_final.cu  nvt_rescale_disk_pbc_compress.cu  nvt_rescale_rigid_bumpy_pbc_compress.cu  rigid_box_sample.cu  rigid_bumpy_box_sample.cu  rigid_bumpy_calculate.cu  rigid_bumpy_equilibrate_pbc.cu  rigid_bumpy_equilibrate_wall.cu  rigid_bumpy_jam_pbc.cu  scale_phi_nve_rigid_bumpy_wall.cu  test_base_particle.cu  test_base_particles.cu  test_base_point_particle.cu  test_base_poly_particle.cu  (+7 more)
